add description of boykov kolmogorov and add updated flow network experiments

--- a/literature.bib
+++ b/literature.bib
@@ -258,6 +258,17 @@
   publisher={Elsevier}
 }
 
+@article{boykov2004experimental,
+  title={An experimental comparison of min-cut/max-flow algorithms for energy minimization in vision},
+  author={Boykov, Yuri and Kolmogorov, Vladimir},
+  journal={IEEE transactions on pattern analysis and machine intelligence},
+  volume={26},
+  number={9},
+  pages={1124--1137},
+  year={2004},
+  publisher={IEEE}
+}
+
 @article{patkar2004efficient,
   title={{Efficient Network Flow Based Ratio-Cut Netlist Hypergraph Partitioning}},
   author={Patkar, Sachin B and Sharma, Himanshu and Narayanan, H},
