--- a/macros.tex
+++ b/macros.tex
@@ -35,6 +35,7 @@
 \newcommand{\GoldbergTarjan}{\textsc{GoldbergTarjan}}
 \newcommand{\EdmondKarp}{\textsc{EdmondKarp}}
 \newcommand{\BoykovKolmogorov}{\textsc{BoykovKolmogorov}}
+\newcommand{\IBFS}{\textsc{Ibfs}}
 
 %Benchmark Instances
 \newcommand{\ALL}{\textsc{All}}
