--- a/master_thesis/experiments/flow_network/flow_network_max_flow_table.tex
+++ b/master_thesis/experiments/flow_network/flow_network_max_flow_table.tex
@@ -1,41 +1,41 @@
-\multirow{5}{*}{\rotatebox{90}{\ALL}} & $500$ & $0.91$ & $+2.24$ & $+24.93$ & $+29.35$ & $\mathbf{-25.39}$ & $-24.3$ & $-6.68$ & $-11.53$ \\ 
- & $1000$ & $1.95$ & $+3.65$ & $+26.19$ & $+32.95$ & $\mathbf{-13.99}$ & $-12.36$ & $+10.81$ & $+7.51$ \\ 
- & $5000$ & $\mathbf{13.71}$ & $+8.63$ & $+29.39$ & $+43.11$ & $+27.03$ & $+35.33$ & $+73.97$ & $+86.31$ \\ 
- & $10000$ & $\mathbf{30.54}$ & $+12.57$ & $+36.15$ & $+54.62$ & $+47.93$ & $+61.72$ & $+100.41$ & $+123.31$ \\ 
- & $25000$ & $\mathbf{67.96}$ & $+23.36$ & $+52.12$ & $+87.8$ & $+53.25$ & $+77.85$ & $+100.95$ & $+138.8$ \\ 
+\multirow{5}{*}{\rotatebox{90}{\ALL}} & $500$ & $\mathbf{0.77}$ & $+7.12$ & $+50.83$ & $+64.67$ & $+46.57$ & $+51.3$ & $+200.56$ & $+256.9$ \\ 
+ & $1000$ & $\mathbf{2.2}$ & $+5.01$ & $+55.31$ & $+67.38$ & $+26.02$ & $+29.76$ & $+153.55$ & $+206.75$ \\ 
+ & $5000$ & $28.6$ & $+5.76$ & $+50.26$ & $+69.07$ & $\mathbf{-3.49}$ & $+6.78$ & $+99.42$ & $+156.17$ \\ 
+ & $10000$ & $81.64$ & $+7.85$ & $+42.73$ & $+63.8$ & $\mathbf{-13.48}$ & $+4.83$ & $+71.78$ & $+132.82$ \\ 
+ & $25000$ & $167.56$ & $+14.8$ & $+37.09$ & $+69.27$ & $\mathbf{-4.7}$ & $+30.35$ & $+82.25$ & $+172.98$ \\ 
 \midrule% 
-\multirow{5}{*}{\rotatebox{90}{\DAC}} & $500$ & $0.34$ & $-0.36$ & $+30.14$ & $+34.98$ & $-37.61$ & $\mathbf{-38.08}$ & $-23.12$ & $-26.56$ \\ 
- & $1000$ & $0.8$ & $-1.7$ & $+41.18$ & $+47.43$ & $-38.94$ & $\mathbf{-41.19}$ & $-20.88$ & $-22.17$ \\ 
- & $5000$ & $5.2$ & $+4.11$ & $+46.02$ & $+58.5$ & $\mathbf{-21.35}$ & $-19.79$ & $+12.55$ & $+19.6$ \\ 
- & $10000$ & $10.67$ & $+3.2$ & $+48.92$ & $+66.83$ & $\mathbf{-9.41}$ & $-6.44$ & $+46.23$ & $+63$ \\ 
- & $25000$ & $31.43$ & $+26.81$ & $+186.2$ & $+255.32$ & $\mathbf{-23.53}$ & $-17.16$ & $+25.16$ & $+47.29$ \\ 
+\multirow{5}{*}{\rotatebox{90}{\DAC}} & $500$ & $\mathbf{0.19}$ & $+4.71$ & $+41.66$ & $+55.51$ & $+79.35$ & $+79.75$ & $+298.08$ & $+454.1$ \\ 
+ & $1000$ & $\mathbf{0.46}$ & $+0.05$ & $+52.89$ & $+59.87$ & $+97.75$ & $+97.69$ & $+315.35$ & $+437.36$ \\ 
+ & $5000$ & $\mathbf{4.39}$ & $+3.42$ & $+51.14$ & $+69.34$ & $+39.03$ & $+47.39$ & $+294.76$ & $+480.9$ \\ 
+ & $10000$ & $\mathbf{14.27}$ & $+3.52$ & $+61.62$ & $+106.02$ & $+12.8$ & $+27.75$ & $+245.63$ & $+446.98$ \\ 
+ & $25000$ & $\mathbf{44.44}$ & $+11.51$ & $+16.04$ & $+108.9$ & $+63.4$ & $+91.42$ & $+424.27$ & $+752.95$ \\ 
 \midrule% 
-\multirow{5}{*}{\rotatebox{90}{\ISPD}} & $500$ & $0.48$ & $-0.58$ & $+26.23$ & $+28.54$ & $-33.85$ & $\mathbf{-34.5}$ & $-19.55$ & $-20.14$ \\ 
- & $1000$ & $1.11$ & $-0.8$ & $+32.35$ & $+37.47$ & $-29.32$ & $\mathbf{-31.59}$ & $-11.91$ & $-11.88$ \\ 
- & $5000$ & $7.06$ & $+6.65$ & $+35.1$ & $+49.35$ & $\mathbf{-1.67}$ & $+1.64$ & $+31.03$ & $+41.91$ \\ 
- & $10000$ & $\mathbf{16.33}$ & $+10.97$ & $+42.54$ & $+64.68$ & $+18.38$ & $+25.84$ & $+75.19$ & $+95.09$ \\ 
- & $25000$ & $\mathbf{75.01}$ & $+26.26$ & $+73.85$ & $+132.06$ & $+37.85$ & $+56.79$ & $+85.28$ & $+124.01$ \\ 
+\multirow{5}{*}{\rotatebox{90}{\ISPD}} & $500$ & $\mathbf{0.37}$ & $+7.37$ & $+38.77$ & $+52.08$ & $+53.92$ & $+57.79$ & $+270.94$ & $+351.04$ \\ 
+ & $1000$ & $\mathbf{0.87}$ & $+4.8$ & $+46.05$ & $+54.38$ & $+41.35$ & $+43.38$ & $+295.43$ & $+374.43$ \\ 
+ & $5000$ & $\mathbf{10.51}$ & $+1.69$ & $+54.66$ & $+70.69$ & $+40.07$ & $+53.53$ & $+353.41$ & $+483.79$ \\ 
+ & $10000$ & $\mathbf{41.82}$ & $+1.02$ & $+51.86$ & $+80.43$ & $+84.99$ & $+109.85$ & $+456.33$ & $+649.18$ \\ 
+ & $25000$ & $\mathbf{271.64}$ & $+2.4$ & $+26.77$ & $+57.93$ & $+109.79$ & $+156.16$ & $+398.97$ & $+589.37$ \\ 
 \midrule% 
-\multirow{5}{*}{\rotatebox{90}{\Dual}} & $500$ & $0.3$ & $+12.37$ & $+0.99$ & $+13.6$ & $\mathbf{-40.36}$ & $-34.35$ & $-39.13$ & $-37.67$ \\ 
- & $1000$ & $0.6$ & $+16.87$ & $+0.83$ & $+18.38$ & $\mathbf{-40.93}$ & $-35.35$ & $-39.47$ & $-37.18$ \\ 
- & $5000$ & $3.2$ & $+37.54$ & $+0.21$ & $+37.78$ & $\mathbf{-39.66}$ & $-23.77$ & $-39.17$ & $-24.01$ \\ 
- & $10000$ & $5.78$ & $+55.72$ & $+1.21$ & $+55.86$ & $\mathbf{-34.01}$ & $-7.81$ & $-33.3$ & $-8$ \\ 
- & $25000$ & $14.71$ & $+105.19$ & $+2.15$ & $+105.88$ & $\mathbf{-33.35}$ & $+17.43$ & $-32.59$ & $+17.28$ \\ 
+\multirow{5}{*}{\rotatebox{90}{\Dual}} & $500$ & $\mathbf{0.14}$ & $+7.67$ & $+21.17$ & $+43.25$ & $+84.81$ & $+103.57$ & $+129.67$ & $+302.37$ \\ 
+ & $1000$ & $\mathbf{0.29}$ & $+6.19$ & $+17.48$ & $+37.63$ & $+94.91$ & $+117.11$ & $+127.92$ & $+338.95$ \\ 
+ & $5000$ & $\mathbf{1.94}$ & $+14.75$ & $+7.02$ & $+39.36$ & $+109.27$ & $+221.2$ & $+130.41$ & $+439.71$ \\ 
+ & $10000$ & $\mathbf{4.19}$ & $+26.87$ & $+3.37$ & $+46.59$ & $+131.25$ & $+383.05$ & $+148.38$ & $+668$ \\ 
+ & $25000$ & $\mathbf{13.02}$ & $+68.6$ & $+0.5$ & $+88.47$ & $+181.61$ & $+907.16$ & $+179.14$ & $+1259.26$ \\ 
 \midrule% 
-\multirow{5}{*}{\rotatebox{90}{\Primal}} & $500$ & $1.85$ & $\mathbf{-0.73}$ & $+73.92$ & $+76.03$ & $+0.86$ & $+0.17$ & $+79.92$ & $+63.57$ \\ 
- & $1000$ & $\mathbf{3.9}$ & $+0.15$ & $+77.48$ & $+81.23$ & $+33.02$ & $+33.57$ & $+160.43$ & $+145.98$ \\ 
- & $5000$ & $\mathbf{29.8}$ & $+0.84$ & $+88.23$ & $+96.71$ & $+160$ & $+162.28$ & $+481.91$ & $+510.71$ \\ 
- & $10000$ & $\mathbf{45.94}$ & $+0.69$ & $+109.75$ & $+120.04$ & $+195.68$ & $+197.69$ & $+487.6$ & $+511.93$ \\ 
- & $25000$ & $\mathbf{174.32}$ & $+0.21$ & $+151.07$ & $+159.04$ & $+243.77$ & $+248.81$ & $+609.44$ & $+648.46$ \\ 
+\multirow{5}{*}{\rotatebox{90}{\Primal}} & $500$ & $3.6$ & $+1.45$ & $+134.06$ & $+137.82$ & $-30.48$ & $\mathbf{-30.82}$ & $+157.29$ & $+154.56$ \\ 
+ & $1000$ & $10.65$ & $+1.42$ & $+173.18$ & $+182.59$ & $-38.78$ & $\mathbf{-39.26}$ & $+103.91$ & $+109.21$ \\ 
+ & $5000$ & $184.72$ & $+1.88$ & $+166.77$ & $+181.9$ & $\mathbf{-60.88}$ & $-60.24$ & $+62.12$ & $+70.09$ \\ 
+ & $10000$ & $290.9$ & $+1.66$ & $+122.2$ & $+133.96$ & $\mathbf{-55.38}$ & $-53.76$ & $+50.44$ & $+56.67$ \\ 
+ & $25000$ & $1002.32$ & $+1.43$ & $+142.23$ & $+148.6$ & $-56.54$ & $\mathbf{-57.04}$ & $+53.74$ & $+59.62$ \\ 
 \midrule% 
-\multirow{5}{*}{\rotatebox{90}{\Literal}} & $500$ & $0.86$ & $+0.72$ & $+63.65$ & $+67.45$ & $\mathbf{-16.1}$ & $-15.41$ & $+35.63$ & $+29.41$ \\ 
- & $1000$ & $\mathbf{1.92}$ & $+1.64$ & $+64.51$ & $+71.46$ & $+15.13$ & $+17.07$ & $+95.07$ & $+90.72$ \\ 
- & $5000$ & $\mathbf{12.31}$ & $+6.15$ & $+76.65$ & $+94.2$ & $+59.04$ & $+66.99$ & $+216.7$ & $+243.13$ \\ 
- & $10000$ & $\mathbf{29.75}$ & $+8.55$ & $+97.28$ & $+115.37$ & $+102.47$ & $+117.45$ & $+302.93$ & $+363.17$ \\ 
- & $25000$ & $\mathbf{64.4}$ & $+15.75$ & $+128.34$ & $+175.78$ & $+126.59$ & $+148.78$ & $+286.31$ & $+349.43$ \\ 
+\multirow{5}{*}{\rotatebox{90}{\Literal}} & $500$ & $\mathbf{0.94}$ & $+4.42$ & $+95.12$ & $+106.26$ & $+23.37$ & $+24.05$ & $+273.61$ & $+330.97$ \\ 
+ & $1000$ & $3.06$ & $+3.54$ & $+107.09$ & $+120.36$ & $-12.02$ & $\mathbf{-13.64}$ & $+215.13$ & $+260.24$ \\ 
+ & $5000$ & $38.66$ & $+6.67$ & $+110.25$ & $+152.32$ & $\mathbf{-29.59}$ & $-27.69$ & $+180.27$ & $+238.17$ \\ 
+ & $10000$ & $122.71$ & $+6.57$ & $+106.82$ & $+138.04$ & $\mathbf{-39.43}$ & $-32.93$ & $+160.96$ & $+214.77$ \\ 
+ & $25000$ & $266.94$ & $+10.03$ & $+87.48$ & $+124.75$ & $\mathbf{-36.29}$ & $-23.41$ & $+191.07$ & $+243.8$ \\ 
 \midrule% 
-\multirow{5}{*}{\rotatebox{90}{\SPM}} & $500$ & $1.46$ & $+0.35$ & $+1.22$ & $+2.47$ & $-29.92$ & $-30.42$ & $-28.84$ & $\mathbf{-34.57}$ \\ 
- & $1000$ & $3.09$ & $+1.45$ & $+1.14$ & $+3.28$ & $-23.32$ & $-22.94$ & $-22.17$ & $\mathbf{-26.89}$ \\ 
- & $5000$ & $\mathbf{25.81}$ & $+1.79$ & $+1.09$ & $+3.26$ & $+26.02$ & $+28.55$ & $+28.61$ & $+27.43$ \\ 
- & $10000$ & $\mathbf{74.81}$ & $+3.78$ & $+2.48$ & $+5.38$ & $+45.86$ & $+49.36$ & $+48.77$ & $+51.06$ \\ 
- & $25000$ & $\mathbf{107.6}$ & $+6.67$ & $+8.56$ & $+12.07$ & $+44.39$ & $+48.88$ & $+47.68$ & $+52.96$ \\ 
+\multirow{5}{*}{\rotatebox{90}{\SPM}} & $500$ & $\mathbf{0.98}$ & $+11.65$ & $+19.8$ & $+32.33$ & $+104.15$ & $+111.46$ & $+213.59$ & $+232.13$ \\ 
+ & $1000$ & $\mathbf{3.23}$ & $+7.7$ & $+16.29$ & $+24.21$ & $+65.42$ & $+71.86$ & $+135.55$ & $+149.33$ \\ 
+ & $5000$ & $\mathbf{54.77}$ & $+3.81$ & $+10.65$ & $+15.63$ & $+9.93$ & $+12$ & $+38.83$ & $+47.28$ \\ 
+ & $10000$ & $217.75$ & $+4.41$ & $+7.62$ & $+13.47$ & $\mathbf{-24.96}$ & $-20.83$ & $-7.96$ & $-2.78$ \\ 
+ & $25000$ & $229.09$ & $+3.88$ & $+7.4$ & $+12.9$ & $\mathbf{-20.77}$ & $-15.81$ & $-8.61$ & $-0.81$ \\ 
