--- a/master_thesis/experiments/flow_network/flow_network_max_flow_summary_table.tex
+++ b/master_thesis/experiments/flow_network/flow_network_max_flow_summary_table.tex
@@ -1,5 +1,5 @@
-\multirow{5}{*}{\rotatebox{90}{\ALL}} & $500$ & $0.91$ & $+2.24$ & $+24.93$ & $+29.35$ & $\mathbf{-25.39}$ & $-24.3$ & $-6.68$ & $-11.53$ \\ 
- & $1000$ & $1.95$ & $+3.65$ & $+26.19$ & $+32.95$ & $\mathbf{-13.99}$ & $-12.36$ & $+10.81$ & $+7.51$ \\ 
- & $5000$ & $\mathbf{13.71}$ & $+8.63$ & $+29.39$ & $+43.11$ & $+27.03$ & $+35.33$ & $+73.97$ & $+86.31$ \\ 
- & $10000$ & $\mathbf{30.54}$ & $+12.57$ & $+36.15$ & $+54.62$ & $+47.93$ & $+61.72$ & $+100.41$ & $+123.31$ \\ 
- & $25000$ & $\mathbf{67.96}$ & $+23.36$ & $+52.12$ & $+87.8$ & $+53.25$ & $+77.85$ & $+100.95$ & $+138.8$ \\ 
+$500$ & $1$ & $-17.05$ & $+12.9$ & $\mathbf{-22.97}$ \\ 
+$1000$ & $2.25$ & $\mathbf{-3.53}$ & $+23.54$ & $-1.97$ \\ 
+$5000$ & $\mathbf{14.8}$ & $+26.25$ & $+86.51$ & $+93.24$ \\ 
+$10000$ & $\mathbf{30.93}$ & $+41.96$ & $+128.33$ & $+163.9$ \\ 
+$25000$ & $\mathbf{72.03}$ & $+34.27$ & $+121.7$ & $+132.63$ \\ 
