--- a/master_thesis/master_thesis.tex
+++ b/master_thesis/master_thesis.tex
@@ -46,6 +46,7 @@
 
 % Pakete die tabular und array verbessern
 \usepackage{array,multirow}
+\newcolumntype{C}[1]{>{\centering}m{#1}}
 
 % Kleiner enumerate und itemize Umgebungen
 \usepackage{enumitem}
