--- a/master_thesis/sections/experiments.tex
+++ b/master_thesis/sections/experiments.tex
@@ -132,9 +132,9 @@ Further, both algorithms perform best on $\ExpHybrid$.\\
 \begin{figure}
 \centering
 \input{experiments/flow_network/speed_up_flow_network.tex} %
-\caption{Speedup of our flow algorithms and networks relative to \EdmondKarp~on
-         $\ExpLawler$ for different instance sizes and types. The red dashed line indicates the
-         $($\EdmondKarp$,\ExpLawler)$ implementation and the blue dashed line
+\caption{Speedup of our flow algorithms and networks relative to
+         $\ExpLawler$ for different instance sizes and types. The red dashed line indicates a
+         speedup of $1$ and the blue dashed line
          indicates a speedup by a factor of $2$.}
 \label{fig:max_flow_network_algo}
 \end{figure} 
@@ -148,20 +148,19 @@ ones with small $\alpha$. Thus, we choose \GoldbergTarjan~in combination with ou
 $\ExpHybrid$ in the following experiments.
 \begin{table}
 \renewcommand{\arraystretch}{1.15}
+\footnotesize
 \centering
-\begin{tabular}{lr|*{4}{r@{\hspace{3mm}}}|*{4}{r@{\hspace{3mm}}}}
+\begin{tabular}{r|C{2.5cm}|c|c|c}
 \toprule
- \multirow{2}{*}{\rotatebox{90}{\footnotesize{Instance}}} & \quad\quad & \multicolumn{4}{c|}{\GoldbergTarjan} & \multicolumn{4}{c}{\EdmondKarp} \\
-\cmidrule{3-10}
- &  & $\ExpHybrid$ & $\ExpEdgeSize$ & $\ExpNodeDegree$ & $\ExpLawler$ & $\ExpHybrid$ & $\ExpEdgeSize$ & $\ExpNodeDegree$ & $\ExpLawler$ \\
- & $|V'|$ &  \tiny{$t[ms]$} & \tiny{$t[\%]$} & \tiny{$t[\%]$} & \tiny{$t[\%]$} & \tiny{$t[\%]$} & \tiny{$t[\%]$} & \tiny{$t[\%]$} & \tiny{$t[\%]$}
-\\\midrule%
+\quad\quad & \IBFS & \BoykovKolmogorov & \GoldbergTarjan & \EdmondKarp \\
+$|V'|$ &  $t[ms]$ & $t[\%]$ & $t[\%]$ & $t[\%]$ 
+\\\midrule% 
 \csname @@input\endcsname experiments/flow_network/flow_network_max_flow_summary_table.tex 
 \bottomrule
 \end{tabular}
-\caption{Running time comparison of maximum flow algorithms on different flow networks.
-         Note, all values in the table are in percentage relative to \GoldbergTarjan~
-         on flow network $\ExpHybrid$. In each line the fastest variant is marked bold.}
+\caption{Running time comparison of maximum flow algorithms on flow network $\ExpHybrid$.
+         Note, all values in the table are in percentage relative to the running time
+         of \IBFS. In each line the fastest variant is marked bold.}
 \label{tbl:flow_algo_network_summary}
 \end{table}
 
@@ -322,6 +321,12 @@ is comparable to the running time of \hMetis{K}.
  & \ALL & \DAC & \ISPD & \Primal & \Literal & \Dual & \SPM \\
 \midrule%
 \csname @@input\endcsname experiments/final_flow/final_flow_running_time.tex 
+\bottomrule
+\multirow{2}{*}{Partitioner} & \multicolumn{7}{c}{Running Time $t[s]$} \\
+\cmidrule{2-8}
+ & \ALL & \DAC & \ISPD & \Primal & \Literal & \Dual & \SPM \\
+\midrule%
+\csname @@input\endcsname experiments/final_flow/final_flow_running_time_old.tex 
 \bottomrule
 \end{tabular} 
 \caption{Comparing the average running time of \KaHyPar{MF} with \KaHyPar{CA} and
