--- a/master_thesis/sections/experiments.tex
+++ b/master_thesis/sections/experiments.tex
@@ -1,21 +1,21 @@
-In this Section, we evaluate the performance of our flow-based refinement framework proposed
-in Section \ref{sec:opt_flow_network} and \ref{sec:flow_refinement}. First, we show the
-effect of the techniques to sparsify the Lawler-Network \cite{lawler1973} on the
-performance of our maximum flow algorithms. Afterwards, we analyze how the maximum
-flow problem size influence the solution quality of different configurations of
+In this Section, we evaluate the performance of our flow-based refinement framework. 
+First, we show the effects of our sparsification techniques of the Lawler-Network 
+\cite{lawler1973} on the performance of our maximum flow algorithms.
+Afterwards, we analyze how the maximum
+flow problem size influences the solution quality of different configurations of
 our framework. Finally, we compare the new version of \emph{KaHyPar} with
-\emph{Max-Flow-Min-Cut} computations against other
-state-of-the-art hypergraph partitioners on our full benchmark set.
+\emph{Max-Flow-Min-Cut} computations against with
+state-of-the-art hypergraph partitioners.
 
 
 \subsection{Instances}
 
-Our full benchmark set consists of $488$ hypergraphs. We choose our benchmarks 
-from three different research areas. For VLSI design we use instances from
+Our full benchmark set consists of $488$ hypergraphs from three different 
+application areas. For VLSI design we use instances from
 the \emph{ISPD98 VLSI Circuit Benchmark Suite} (\ISPD) \cite{alpert1998ispd98} and add more recent
 instances of the \emph{DAC 2012 Routability-Driven Placement Contest} (\DAC) \cite{viswanathan2012dac}.
-Further, we interpret the Sparse Matrix instances of the \emph{Florida Sparse Matrix 
-collection} (\SPM) \cite{davis2011university} as hypergraphs using the row-net model \cite{catalyurek1999hypergraph}.
+We interpret the Sparse Matrix instances of the \emph{Florida Sparse Matrix 
+Collection} (\SPM) \cite{davis2011university} as hypergraphs using the row-net model \cite{catalyurek1999hypergraph}.
 The rows of each matrix are treated as hyperedges and the columns are the vertices of
 the hypergraph. Our last benchmark type are SAT formulas of the \emph{International SAT
 Competition 2014} \cite{belov2014application}. A common interpretation of a SAT formula 
@@ -23,14 +23,14 @@ as hypergraph is to interpret the literals as vertices and each clause as a net 
 Mann and Papp \cite{mann2014formula} suggested two other hypergraph representation of
 SAT formulas, called \Primal~and \Dual. The \Primal~representation treats each variable
 as vertex and each clause as hyperedge. The \Dual~representation treats each clause as
-vertex and the variables induced nets containing all clauses where the corresponding
-variable occurs. A statistical summary of the different instance types is presented in
+vertex and the variables induces nets containing all clauses where the corresponding
+variable occurs. A summary of the different instance types is presented in
 Table \ref{tbl:full_benchmark_set}. \\
 We divide our full benchmark set into two smaller subsets. Our \emph{parameter tuning}
 benchmark set consists of $25$ hypergraphs, $5$ of each instance type (except \DAC). Additionally,
 we choose a benchmark subset of $165$ instances. On our general experiments we partition
-each hypergraph into $k \in \{2,4,8,16,32,64,128\}$ blocks and use for each $k$ $10$ different
-\emph{seeds} with $\epsilon = 3\%$.
+each hypergraph into $k \in \{2,4,8,16,32,64,128\}$ blocks and use $10$ different
+\emph{seeds} for each $k$ and an imbalance of $\epsilon = 3\%$.
 
 \subsection{System and Methodology}
 \label{sec:methodology}
@@ -42,34 +42,34 @@ $20$ MB L$3$- and $8\times256$ KB L$2$-Cache. The code is written in C++ and com
 our new implementation of \emph{KaHyPar} with \emph{(M)ax-(F)low-Min-Cut} computations 
 as \KaHyPar{MF} and the latest configuration with \emph{(C)ommunity-(A)ware} coarsening as
 \KaHyPar{CA}. \\
-We compare \KaHyPar{MF} against the state-of-the-art hypergraph partitioner \emph{hMetis} 
+We compare \KaHyPar{MF} with the state-of-the-art hypergraph partitioners \emph{hMetis} 
 \cite{karypis1999multilevel,karypis2000multilevel} and \emph{PaToH} \cite{catalyurek1999hypergraph}.
 \emph{hMetis} provides a direct $k$-way (\hMetis{K}) and recursive bisection (\hMetis{R}) implementation.
-Further, we also use the default configuration (\PaToH{D}) and quality preset (\PaToH{Q}) of
+Further, we use the default configuration (\PaToH{D}) and quality preset (\PaToH{Q}) of
 \emph{PaToH}. We configure \emph{hMetis} to optimize the \emph{sum-of-external-degree}-metric
 (SOED) and calculate $(\lambda-1)(\Pi) = \text{SOED}(\Pi) - \text{cut}(\Pi)$. This is also
-suggested by the authors of \emph{hMetis} \cite{karypis2000multilevel}. Further, we have
+suggested by the authors of \emph{hMetis} \cite{karypis2000multilevel}. Additionally, we have
 to adapt the imbalance definition of \hMetis{R}. An imbalance value of $5$ means that the weight
 of each bisected block is allowed to be between $0.45 \cdot c(V)$ and $0.55 \cdot c(V)$.
 To ensure that \hMetis{R} produces a valid $\epsilon$-balanced partition after $\log_2(k)$
 bisections we have to adapt $\epsilon$ to
 \[\epsilon' = 100 \cdot \Bigg( \left( (1 + \epsilon) \frac{\lceil \frac{c(V)}{k} \rceil}{c(V)} \right)^{\frac{1}{\log_2(k)}} - 0.5 \Bigg)\]
 If we evaluate the performance of our hypergraph partitioner,
-we first summarize the results by calculating the average (or minimum) of a specific metric
+we first summarize the results by calculating the arithmetic mean (or minimum) of a specific metric
 for the diffrent \emph{seeds} of a hypergraph instance partitioned into $k$ blocks. 
 Afterwards, we calculate the \emph{geometric mean} of 
 all instances to give each instance comparable influence on the final result. 
-To compare the performance of different hypergraph partitioners more detailed 
-we use performance plots introduced in \cite{schlag2016k} (see \autoref{fig:final_flow}).
-In the following, we will call a hypergraph partitioned into $k$ blocks an \emph{instance}.
-For each partitioner resp. algorithm we determine the instance with the 
+To compare the performance of different hypergraph partitioners in more detail
+we use performance plots introduced in \cite{schlag2016k}.
+In the following, we will call a $k$-way partition of a hypergraph an \emph{instance}.
+For each algorithm we determine the instance with the 
 minimum cut (of the $10$ different \emph{seeds}). Each color in the plot corresponds to
-one algorithm. The $x$-axis represents an instance and the $y$-axis represents the quality
-produced by an algorithm for an instance relative to best partition of an algorithm produced for
-the instance. For example, partitioner $P_1$ produces a partition for an instance $X$ with
+one algorithm. The $x$-axis represents the number of instances and the $y$-axis represents the quality ratio
+produced by an algorithm for an instance relative to the partition of the best algorithm. 
+For example, partitioner $P_1$ produces a partition for an instance $X$ with
 quality $100$ and partitioner $P_2$ produces a partition for the same instance of quality $105$.
 Then, the $y$-value for instance $X$ of partitioner $P_2$ is $1 - \frac{105}{100} = 0.05$ and
-for partitioner $P_1$ is $1 - \frac{100}{100} = 0$ which means that the partition of partitioner $P_2$
+for partitioner $P_1$ is $1 - \frac{100}{100} = 0$, which means that the partition of partitioner $P_2$
 for instance $X$ is $5\%$ worse than the best partition produced for instance $X$.
  A value of zero indicates that the algorithm
 produced the best partition. A point close to one indicates that the partition produced by the 
@@ -82,34 +82,30 @@ greater than one corresponds to an infeasible solution that violated the balance
 \subsection{Flow Algorithms and Networks}
 \label{sec:exp_flow_network}
 
-In the first experiment, we evaluate the effect of our techniques to sparsify
-the state-of-the-art hypergraph flow network representation (see Section \ref{sec:opt_flow_network})
-on the performance of our maximum flow algorithms \GoldbergTarjan~and \EdmondKarp. 
-We refer to our different flow networks as $\ExpLawler$ (see Section \ref{sec:related_lawler}), $\ExpNodeDegree$ (see Section 
-\ref{sec:degree_network}), $\ExpEdgeSize$ (see Section \ref{sec:edge_size_network})
-and $\ExpHybrid$ (see Section \ref{sec:hybrid_network}). \\
+In the first experiment, we evaluate the effect of our sparsification techniques
+on the performance of our maximum flow algorithms \EdmondKarp, \GoldbergTarjan, \BoykovKolmogorov~and \IBFS. 
+We refer to the Lawler-Network as $\ExpLawler$, which is our baseline flow network. In
+Section \ref{sec:opt_flow_network} we present several techniques to reduce the number
+of nodes and edges of $\ExpLawler$. $\ExpNodeDegree$ represents our flow network in which
+we remove all hypernodes with a degree smaller or equal to $3$. The network $\ExpEdgeSize$ models
+each hyperedge of size $2$ as undirected graph edge between the corresponding pins. Finally,
+$\ExpHybrid$ combines both networks. \\
 We evaluate the performance of our maximum flow algorithms on flow problems with
 $|V'| \in \{500,1000,5000,10000,25000\}$ hypernodes. The instances are generated by executing
 \emph{KaHyPar} on our benchmark subset (see Table \ref{tbl:benchmark_subset}) for $k = 2$ and five different 
-seeds. After an instance is bipartitioned, we generate flow problem instances
+seeds. After an instance is bipartitioned, we generate flow problems
 with the above-mentioned sizes and execute each possible combination of flow algorithm and
 flow network on it. \\
-The benchmark instances can be split into $6$ different benchmark types. The properties of the instances
-regarding the average hypernode degree and average hyperedge size is shown in \autoref{tbl:benchmark_subset}.
-Remember, $\ExpEdgeSize$ should perform best on instances with a small average hyperedge size and
-$\ExpNodeDegree$ should perform best on instances with a low average hypernode degree. Based on 
-\autoref{tbl:benchmark_subset}, $\ExpEdgeSize$ should significantly reduce the number of
-nodes and edges on \Primal~and \Literal~instances and $\ExpNodeDegree$ on \Dual~instances in
-comparison to our baseline $\ExpLawler$. Also both should sparsify the resulting flow network
-of \ISPD~and \DAC~instances. Further, we expect that $\ExpHybrid$ combines the advantages of
-both networks and performs best on all benchmark types.\\
-\autoref{fig:node_edge_distribution}~shows the the number of nodes and edges
-of the resulting flow networks for flow problems with $25000$ hypernodes.
-$\ExpHybrid$ reduces the number of nodes of nearly each benchmark type 
-by at least a factor of $2$, except on \SPM~instances. Moreover, instances 
-with a large average hypernode degree, like \Primal~or \Literal, yields large flow problem 
-instances and instances with a small average hypernode degree yields small flow problem
-instances (see \Dual~instances).\\
+\autoref{fig:node_edge_distribution}~shows the number of nodes and edges
+of the resulting flow networks for flow problems with $25000$ hypernodes. As expected,
+$\ExpNodeDegree$ reduces the number of nodes more significantly on low hypernode degree
+instances (\Dual) and $\ExpEdgeSize$ more on small hyperedge size instances
+(\Primal~and \Literal). Further, $\ExpHybrid$ combines the advantages of both networks
+and reduces the number of nodes and edges of nearly each benchmark type by at least a factor of $2$,
+except on \SPM~instances. If we compare the sizes of the resulting flow problem, we can observe
+that instances with a high density ($d = \frac{|E|}{|V|}$), like \Primal~or \Literal, yield large flow problem 
+instances and instances with a low density yield small flow problem
+instances (see \Dual~instances). \\
 \begin{figure}[ht!]
 \centering
 \input{experiments/flow_network/node_edge_distribution.tex} %
@@ -118,34 +114,37 @@ instances (see \Dual~instances).\\
          The red dashed lines indicates $25000$ nodes.}
 \label{fig:node_edge_distribution}
 \end{figure} 
-In \autoref{fig:max_flow_network_algo} we compare the performance of our maximum flow algorithms on the
-different flow networks. The bars in the plot indicates speed-ups relative to the flow algorithm
-\EdmondKarp~on flow network $\ExpLawler$. The main observation is that \EdmondKarp~performs
-best on small flow network instances and \GoldbergTarjan~on large flow network instances. For $|V'| \le 1000$
-\EdmondKarp~is faster than \GoldbergTarjan~on most of the different benchmark types. For
-$|V'| > 1000$ we can observe the opposite behavior except for \DAC~and \Dual~instances. But the
-resulting flow problems of these instances induce still the small flow problems compared to e.g.,
-\Primal~or \Literal. (see \autoref{fig:node_edge_distribution}). 
-On the largest flow network instances \Primal~and \Literal~for $|V'| = 25000$ 
-\GoldbergTarjan~is up to a factor of $4$-$7$ faster than \EdmondKarp.
-Further, both algorithms perform best on $\ExpHybrid$.\\
+In \autoref{fig:max_flow_network_algo}~we compare the performance of our maximum flow algorithms
+on different flow networks. A bar in the plot indicates the speed-up of the corresponding algorithm
+executed on $\ExpNodeDegree$, $\ExpEdgeSize$ or $\ExpHybrid$ relative to the execution on $\ExpLawler$.
+The main observation is that the speed-ups are nearly proportional to the reduction of the number
+of nodes and edges of the corresponding flow network. For example, $\ExpHybrid$ reduces the size
+of the flow problems of nearly each benchmark type by at least factor of $2$ compared to $\ExpLawler$. Consequently,
+the speed-ups of our maximum flow algorithms on $\ExpHybrid$ are approximately to $2$ on each
+benchmark type. Our \GoldbergTarjan~implementation profits most from our sparsification 
+techniques. The algorithm is around $3$ to $4$ times faster on $\ExpHybrid$ than on 
+$\ExpLawler$. Furhter, all algorithms perform best on $\ExpHybrid$. In conclusion, our
+sparsification techniques not only reduces the size of the flow problems, it also significantly
+speed-ups the running time of several maximum flow algorithms.\\
 \begin{figure}
 \centering
 \input{experiments/flow_network/speed_up_flow_network.tex} %
-\caption{Speedup of our flow algorithms and networks relative to
-         $\ExpLawler$ for different instance sizes and types. The red dashed line indicates a
-         speedup of $1$ and the blue dashed line
-         indicates a speedup by a factor of $2$.}
+\caption{Speed-ups of our flow algorithms on different flow networks relative to execution on
+         $\ExpLawler$ for different problem sizes and types. The red resp. blue dashed line 
+         indicates a speed-up of $1$ resp. $2$.}
 \label{fig:max_flow_network_algo}
 \end{figure} 
-\autoref{tbl:flow_algo_network_summary}~shows the summary of our flow algorithm and flow network experiment. 
-It proofs our assumption that \EdmondKarp~works best on small instances
-and \GoldbergTarjan~on large instances. However, the flow problem sizes in our
-\emph{flow}-based refinement algorithm are chosen adaptively and depend on the
-\emph{adaptive flow iteration} parameter $\alpha$ (see Section \ref{sec:adaptive_flow_iterations}).
-Therefore, the running time of flow instances generated with a large $\alpha$ will dominate the
-ones with small $\alpha$. Thus, we choose \GoldbergTarjan~in combination with our flow network
-$\ExpHybrid$ in the following experiments.
+In \autoref{tbl:flow_algo_network_summary}, we compare the absolute running times of the 
+algorithms on our fastest flow network $\ExpHybrid$. The \IBFS~algorithm works best on
+large instances ($|V'| > 1000$). For smaller benchmarks ($|V'| \le 1000$) algorithms
+based on the \emph{augmenting path} concept, like \BoykovKolmogorov~or \EdmondKarp, are faster
+than \IBFS~and \GoldbergTarjan. However, we are currently not able to use the \IBFS~algorithm
+in our \emph{flow}-based local search algorithm. The data structure of the algorithm
+is not optimized for multiple executions on different flow networks, because it did not 
+implement an efficient strategy to reuse the allocated memory. The usage of the \IBFS~algorithm in our
+framework leads to memory overflows. However, we currently work on a reimplementation
+of the algorithm such that it can be used. Therefore, we choose the \BoykovKolmogorov~maximum 
+flow algorithm in combination with our flow network $\ExpHybrid$ in the following experiments.
 \begin{table}
 \renewcommand{\arraystretch}{1.15}
 \footnotesize
@@ -158,9 +157,9 @@ $|V'|$ &  $t[ms]$ & $t[\%]$ & $t[\%]$ & $t[\%]$
 \csname @@input\endcsname experiments/flow_network/flow_network_max_flow_summary_table.tex 
 \bottomrule
 \end{tabular}
-\caption{Running time comparison of maximum flow algorithms on flow network $\ExpHybrid$.
+\caption{Absolute running time of our maximum flow algorithms on flow network $\ExpHybrid$.
          Note, all values in the table are in percentage relative to the running time
-         of \IBFS. In each line the fastest variant is marked bold.}
+         of the \IBFS algorithm. In each line the fastest variant is marked bold.}
 \label{tbl:flow_algo_network_summary}
 \end{table}
 
