--- a/master_thesis/sections/experiments.tex
+++ b/master_thesis/sections/experiments.tex
@@ -163,64 +163,59 @@ $|V'|$ &  $t[ms]$ & $t[\%]$ & $t[\%]$ & $t[\%]$
 \label{tbl:flow_algo_network_summary}
 \end{table}
 
-\subsection{Setup of the direct $k$-way Flow-Based Refinement}
+\subsection{Configuring the direct $k$-way Flow-Based Refinement}
 \label{sec:flow_configuration}
 
 In this Section, we analyze the quality of our $k$-way flow-based refinement algorithm with
 different configurations on our parameter tuning benchmark subset (see Table \ref{tbl:parameter_tunning_set}).
 There are several configurations and tuning parameters which we have to evaluate:
 \begin{itemize}
-\item \emph{Max-(F)low-Min-Cut} computations as refinement algorithm (see Section \ref{sec:flow_local_search_hypergraph})
+\item \emph{Max-(F)low-Min-Cut} computations as \emph{local search} algorithm
 \item \emph{Adaptive Flow Iteration} parameter $\alpha'$ (see Section \ref{sec:adaptive_flow_iterations})
 \item \emph{(M)ost Balanced Minimum Cut} heuristic (see Section \ref{sec:mbmc_hypergraphs})
 \item Combining \emph{Max-(F)low-Min-Cut} computations with \emph{(FM)} refinement
 \end{itemize}
-In the following, we will denote a configuration e.g. with \FlowVariant{+}{-}{-} which indicates
+In the following, we denote a configuration e.g. with \FlowVariant{+}{-}{-} which indicates
 which heuristic resp. technique is enabled $(+)$ or disabled $(-)$. The meaning of the 
 abbreviations is explained in the enumeration above (see letters inside parentheses). We evaluate
-a configuration for $k \in \{2,4,8,16,32,64,128\}$, $\alpha' \in \{1,2,4,8,16\}$
-and $10$ different seeds on our parameter tuning benchmark subset ($\epsilon = 3\%$). 
-We execute a \emph{flow}-based \emph{local search} 
-on each level $i$ with $i = 2^j$ ($j \in \mathbb{N}_+$) 
-(see Section \ref{sec:flow_local_search_hypergraph}). Additionally, we add configuration
-\FlowVariant{+}{+}{+} with \emph{flow execution policy} $i = 128j$ ($j \in \mathbb{N}_+$). 
-This configuration has an impracticable running time, but should provide a lower bound
-of the solution quality achievable with \emph{Max-Flow-Min-Cut} computations in combination
-with \emph{FM} refinement.
-We refer to this variant as \Constant{128}. Further, we use the 
-latest version of \emph{KaHyPar} as reference \cite{heuer2017improving}. We refer to this variant as 
-\FlowVariant{-}{-}{+}. \\
+each configuration for $k \in \{2,4,8,16,32,64,128\}$, $\alpha' \in \{1,2,4,8,16\}$
+and $10$ different seeds ($\epsilon = 3\%$).  We execute a \emph{flow}-based \emph{local search} 
+on each level $i$ with $i = 2^j$ ($j \in \mathbb{N}_+$).
+%Additionally, we add configuration \FlowVariant{+}{+}{+} with \emph{flow execution policy} 
+%$i = 128j$ ($j \in \mathbb{N}_+$). This configuration has a prohibitively large running time, 
+%but it is used as an upper bound for the quality achievable with \emph{Max-Flow-Min-Cut} 
+%computations in combination with \emph{FM} refinement. We refer to this variant as \Constant{128}. 
+Further, we use \KaHyPar{CA} as reference \cite{heuer2017improving} and refer to it 
+as \FlowVariant{-}{-}{+}. \\
 The results are summarized in \autoref{tbl:alpha_exp}. The values
-in the column \emph{Avg} are improvements of the connectivity metric
+in column \emph{Avg} are improvements
 relative to our baseline configuration \FlowVariant{-}{-}{+}. The running
-time are absolute values in seconds. The first observation is that flows on
-its own as refinement strategy are not strong enough to outperform the
+time are absolute values in seconds. The first observation is that flows
+as single refinement strategy are not strong enough to outperform the
 \emph{FM} heuristic. Our strongest configuration with $\alpha' = 16$
-is $2.58\%$ worse than our \emph{FM} baseline. But the result 
-is still remarkable because we only execute flows on $\log{n}$ levels
-instead of $n$ as the \emph{FM} algorithm is executed. The running time
-scales nearly linear with parameter $\alpha'$. \\
+is $0.2\%$ worse than the \emph{FM} baseline. The running time
+scales nearly linear with parameter $\alpha'$. 
 Enabling the \emph{Most Balanced Minimum Cut} heuristic significantly improves the
 quality compared to the configuration \FlowVariant{+}{-}{-}.
-But the quality improvements are more significant for large
+The quality improvements are more significant for large
 $\alpha'$. The larger the flow problem size, the larger is the number of different minimum 
-$(S,T)$-cutsets and this increases the possibility to find a feasible solution according to 
-our balanced constraint. Also it outperforms our baseline \emph{FM} 
-configuration for $\alpha' = 16$ by $0.51\%$.\\
+$(S,T)$-cutsets and this increases the possibility to find a feasible solution that respects the 
+balanced constraint. Also it outperforms our baseline \emph{FM} 
+configuration for $\alpha' = 16$ by $1.75\%$.
 If we enable \emph{FM} refinement in all levels where no flow is executed, we improve the solution
-quality by nearly $2\%$ (for $\alpha' = 16$). Also, the running time of this variant is faster
+quality by $2.21\%$ (for $\alpha' = 16$). Also, the running time of this variant is faster
 than all previous flow configurations because we transfer more work to the \emph{FM} refinement.
-It has as a consequence that a block becomes faster \emph{inactive} during the \emph{active block 
+Consequently, a block becomes faster \emph{inactive} during the \emph{active block 
 scheduling} algorithm and this decreases the number of rounds of complete pairwise 
-flow-based refinements. \\
-Finally, \Constant{128} gives us a lower bound of the quality
-achievable with a combination of \emph{flow}-based and \emph{FM} refinement. Flows are executed 
-in each $128$th level of the multilevel hierarchy. The quality is $2.44\%$ better than our
-baseline configuration, but $\approx 100$ times slower. Compared to \FlowVariant{+}{+}{+} for 
-$\alpha = 16$, \Constant{128} is only $0.57\%$ better and around $\approx 25$ times slower.\\
-Our best configuration is \FlowVariant{+}{+}{+} with $\alpha' = 16$. It is also the most 
-effective one (see Effectiveness Test in Appendix \ref{appendix:effectiveness_test}). For
-further experiments, we refer to this variant as \KaHyPar{MF}.
+flow-based refinements. 
+%Finally, \Constant{128} gives us a lower bound of the quality
+%achievable with a combination of \emph{flow}-based and \emph{FM} refinement. Flows are executed 
+%in each $128$th level of the multilevel hierarchy. The quality is $2.44\%$ better than our
+%baseline configuration, but roughly $100$ times slower. Compared to \FlowVariant{+}{+}{+} for 
+%$\alpha = 16$, \Constant{128} is only $0.57\%$ better and around roughly $25$ times slower.\\
+Our best configuration is \FlowVariant{+}{+}{+} with $\alpha' = 16$. 
+%It is also the most effective one (see Effectiveness Test in Appendix \ref{appendix:effectiveness_test}). 
+For further experiments, we refer to this variant as \KaHyPar{MF}.
 
 \begin{table}
 \renewcommand{\arraystretch}{1.15}
@@ -233,12 +228,6 @@ $\alpha'$ & Avg.$[\%]$ & $t[s]$ & Avg.$[\%]$ & $t[s]$ & Avg.$[\%]$ & $t[s]$ & Av
 \midrule%
 \csname @@input\endcsname experiments/flow_alpha/flow_alpha_table.tex 
 \bottomrule
- Config. & \multicolumn{2}{c||}{\FlowVariant{+}{-}{-}} & \multicolumn{2}{c||}{\FlowVariant{+}{+}{-}}  & \multicolumn{2}{c|}{\FlowVariant{+}{+}{+}} & \multicolumn{2}{c|}{\Constant{128}} \\
-\midrule
-$\alpha'$ & Avg.$[\%]$ & $t[s]$ & Avg.$[\%]$ & $t[s]$ & Avg.$[\%]$ & $t[s]$ & Avg.$[\%]$ & $t[s]$ \\
-\midrule%
-\csname @@input\endcsname experiments/flow_alpha/flow_alpha_table_old.tex 
-\bottomrule
 \end{tabular}
 \caption{ Table contains results for different configurations of our flow-based refinement
           framework for increasing $\alpha'$. The quality in column \emph{Avg.} is relative
@@ -250,7 +239,7 @@ $\alpha'$ & Avg.$[\%]$ & $t[s]$ & Avg.$[\%]$ & $t[s]$ & Avg.$[\%]$ & $t[s]$ & Av
 \subsection{Speed-Up Heuristics}
 \label{sec:speed_up}
 
-At the end of Section \ref{sec:flow_local_search_hypergraph}, we have presented several heuristics
+At the end of Section \ref{sec:integration_kahypar}, we have presented several heuristics
 to prevent \emph{unpromising} flow executions during the \emph{active block scheduling} refinement ((R1)-(R3)).
 The main assumption is that only a minority of \emph{Max-Flow-Min-Cut} computations
 lead to an improvement. To verify this assumption, 
